Bug 72486 - EDITING, TABLES: "Edit > Select All" directly selects the entire document on a document beginning with a table
Summary: EDITING, TABLES: "Edit > Select All" directly selects the entire document on ...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.beta2
Hardware: Other All
: medium major
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.5.0 target:4.4.1
Keywords: bibisected, regression
: 77067 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-12-08 16:04 UTC by pierre-yves samyn
Modified: 2020-06-12 14:49 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pierre-yves samyn 2013-12-08 16:04:44 UTC
Hello

Edit> Select All is now possible when there is nothing before the table, thank's to Miklos Vajna :)

But we lose the usual successive selection (cell, table, all)  (everything is selected directly). It is not homogeneous with the feature when there is a paragraph before Table.

I think it would be more consistent to keep the successive selection also in this case.

Regards
Pierre-Yves
Comment 1 Jean-Baptiste Faure 2013-12-08 21:42:59 UTC
Confirmed under Ubuntu, except the behavior is the first ctrl+A select the table entirely and the second select the entire document. So 2 steps instead of 3.

Best regards. JBF
Comment 2 Cor Nouws 2013-12-08 22:10:15 UTC
Hi Pierre-yves,

Ctrl+A in a table, not at the top of a document, selects the whole table immediately, and not only the cell with the focus.

Ctrl+A in a table, at the top of a document, selects the whole document immediately, and not (part of) the table.

Testing Ubuntu here ;)
Comment 3 pierre-yves samyn 2013-12-09 17:15:15 UTC
Hi Cor

(In reply to comment #2)
> Ctrl+A in a table, not at the top of a document, selects the whole table
> immediately, and not only the cell with the focus.

Same on windows... but *only* if the cell is empty :)

Perhaps I should have said so... I did not think it was necessary because I did not know that it is different with Ubuntu

On Windows if the cell is not empty Ctrl+A selects the content of the Cell, 2nd Ctrl+A selects the table, 3rd Ctrl+A selects the whole document.

Isn't it the same with Ubuntu ?
 
> Ctrl+A in a table, at the top of a document, selects the whole document
> immediately, and not (part of) the table.

Same on windows, the table (or cell) is empty or not.
This is the reason for my request

Regards
Pierre-Yves
Comment 4 Cor Nouws 2013-12-10 18:21:50 UTC
(In reply to comment #3)

> Same on windows... but *only* if the cell is empty :)
> 
> On Windows if the cell is not empty Ctrl+A selects the content of the Cell,
> 2nd Ctrl+A selects the table, 3rd Ctrl+A selects the whole document.
> 
> Isn't it the same with Ubuntu ?

Yes, I missed that detail. Sorry.

> > Ctrl+A in a table, at the top of a document, selects the whole document
> > immediately, and not (part of) the table.
> 
> Same on windows, the table (or cell) is empty or not.

But once it did not.. in rare situation (prolly after deleting some empty paragraph on top of the document)

> This is the reason for my request

I support that, of course :)
Thanks for reporting!
Comment 5 sophie 2014-04-11 09:40:36 UTC
*** Bug 77067 has been marked as a duplicate of this bug. ***
Comment 6 Ian Smith 2014-11-21 16:44:42 UTC
It may be worth noting that if a document begins with table, _all_ tables lose the successive selection functionality (at least with LO 4.3.3 on OpenSuse).

To reproduce:
1) Insert a table at the beginning of a document.
2) Insert a second table after a paragraph break.
3) Enter some text into a cell in the second table.
4) Press ctrl-a.
5) The entire document is selected

Inserting some text or a paragraph break before the first table changes the behaviour of all tables back to the expected.

It seems that the fix for #37606 has resulted in some very confusing behaviour.
Comment 7 tmacalp 2014-12-12 17:06:23 UTC
I don't know why this bug was marked with a severity of "enhancement," but I've set it to "major" because it's an obvious regression and they warrant higher severity.  It is also much more annoying than the comments here seem to indicate.

If you trigger this bug, your selection will expand to the table plus all of the content below it.  This makes it impossible to apply any table properties from the table dialog.  It will simply ignore you.  You might wonder why you are unable to set border thickness, background color, etc...  

Also, attempting to set any paragraph styles will only apply the styles to the non-table selected content below.

Even worse, if this bug is triggered, it ruins select-all from any frame/table in that document.  Trying to select-all on content in the frame/table will select everything outside of the frame/table.

This is really quite an annoying bug and is something that I'm sure people run into all of the time.

I bibisected:
 387dd1052972d27a3065a249b357e50e0a29829b is the first bad commit
commit 387dd1052972d27a3065a249b357e50e0a29829b
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Wed Nov 27 07:47:36 2013 +0000

    source-hash-35836f350861b33a0c28307a413eff76d0433d1e
    
    commit 35836f350861b33a0c28307a413eff76d0433d1e
    Author:     Thomas Arnhold <thomas@arnhold.org>
    AuthorDate: Mon Oct 28 03:35:57 2013 +0100
    Commit:     Thomas Arnhold <thomas@arnhold.org>
    CommitDate: Mon Oct 28 15:16:18 2013 +0100
    
        fixincludeguards.sh: desktop
    
        Change-Id: Iaeba85d313af1840f925fd0536d11ac83545a118

:100644 100644 4e339258b1182fd1d3ab540a012a4144eb1f74ee 69afacb96606dc2eebb0f3972ae9f4a11d0fd529 M      ccache.log
:100644 100644 4d589f0b009f533221d5e57b52dafb28ca6985aa c5c25b86184ceb2cabf6e7e83d7eb780ab2616a7 M      commitmsg
:100644 100644 79a16303ad9a3514d31a0ac6d2a0be68ee6e98bd 7d576def3aa457df1909151683abdbf90dac439b M      make.log
:040000 040000 aba6f4edb64dec00f7d9f1c6d356d83e2e7c6997 90a816d72f566a813ecd8de02c813a7575759ca3 M      opt


$ git bisect log
# bad: [423a84c4f7068853974887d98442bc2a2d0cc91b] source-hash-c15927f20d4727c3b8de68497b6949e72f9e6e9e
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# good: [e02439a3d6297a1f5334fa558ddec5ef4212c574] source-hash-6b8393474974d2af7a2cb3c47b3d5c081b550bdb
git bisect good e02439a3d6297a1f5334fa558ddec5ef4212c574
# bad: [4850941efe43ae800be5c76e1102ab80ac2c085d] source-hash-980a6e552502f02f12c15bfb1c9f8e6269499f4b
git bisect bad 4850941efe43ae800be5c76e1102ab80ac2c085d
# skip: [a043626b542eb8314218d7439534dce2fc325304] source-hash-9379a922c07df3cdb7d567cc88dfaaa39ead3681
git bisect skip a043626b542eb8314218d7439534dce2fc325304
# skip: [aba65c3e4c0df07e4909aeefb758cdb688242bf6] source-hash-827524abfb4b577d08276fde40929a9adfb7ff1a
git bisect skip aba65c3e4c0df07e4909aeefb758cdb688242bf6
# skip: [aba65c3e4c0df07e4909aeefb758cdb688242bf6] source-hash-827524abfb4b577d08276fde40929a9adfb7ff1a
git bisect skip aba65c3e4c0df07e4909aeefb758cdb688242bf6
# bad: [c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31] source-hash-c69ed33628ec0b7abf6296539cf280d6c4265930
git bisect bad c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31
# bad: [c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31] source-hash-c69ed33628ec0b7abf6296539cf280d6c4265930
git bisect bad c81a8a0dcfc1ed095a80e4485c89dd0fcaf73f31
# good: [1d4980621741d3050a5fe61b247c157d769988f2] source-hash-89d01a7d8028ddb765e02c116d202a2435894217
git bisect good 1d4980621741d3050a5fe61b247c157d769988f2
# skip: [89110ca258fa7a15dfc546acfb39e76fc3eb2a44] source-hash-e450a2c506ac7cd4433b0f93fc750a89919bc03c
git bisect skip 89110ca258fa7a15dfc546acfb39e76fc3eb2a44
# good: [1cca92a409385d9288c28a54d5e3008e56728bc0] source-hash-7be7824bbbdeee6fa998b950e6046ab37fe690cb
git bisect good 1cca92a409385d9288c28a54d5e3008e56728bc0
# skip: [5fa28ce2931a35ae64ae08d3904cfb76d24459d8] source-hash-2304beaca33c63b94df99cb827716f00ce259f9a
git bisect skip 5fa28ce2931a35ae64ae08d3904cfb76d24459d8
# good: [2a9ff869c5638dc5c3aa387d0fe55c3291c86288] source-hash-01b7e04172889cbc9e4ac404b105e18ddc062d6f
git bisect good 2a9ff869c5638dc5c3aa387d0fe55c3291c86288
# bad: [387dd1052972d27a3065a249b357e50e0a29829b] source-hash-35836f350861b33a0c28307a413eff76d0433d1e
git bisect bad 387dd1052972d27a3065a249b357e50e0a29829b
# good: [5b0bc0b6253d7572470c6a3058d5fff68c93897f] source-hash-bdf2b506c38b38af531d8c8aa14dd51d89386899
git bisect good 5b0bc0b6253d7572470c6a3058d5fff68c93897f
# good: [288796dca516e779d45513775be7c7bc3ff291f7] source-hash-5d0051efb99c6cbd0dc4dd655a71e7435159f6bc
git bisect good 288796dca516e779d45513775be7c7bc3ff291f7
# good: [6e1586198f281b174861c93be569ca613e1b0aae] source-hash-1aae6f6087214f143886dd4c18d226fb1657b5c3
git bisect good 6e1586198f281b174861c93be569ca613e1b0aae
# first bad commit: [387dd1052972d27a3065a249b357e50e0a29829b] source-hash-35836f350861b33a0c28307a413eff76d0433d1e
Comment 8 Miklos Vajna 2015-01-03 11:42:36 UTC
(In reply to pierre-yves samyn from comment #0)
> But we lose the usual successive selection (cell, table, all)  (everything
> is selected directly). It is not homogeneous with the feature when there is
> a paragraph before Table.
> 
> I think it would be more consistent to keep the successive selection also in
> this case.

Indeed. I'll look into this.
Comment 9 Commit Notification 2015-01-03 12:10:49 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fa39e7970496537258eaad1f5351db2d675225b6

fdo#72486 SwWrtShell::SelAll: if in table, then call extended select all ...

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2015-01-24 20:50:18 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d41349d8456361f8507f579d5bab388f56530b33&h=libreoffice-4-4

fdo#72486 SwWrtShell::SelAll: if in table, then call extended select all ...

It will be available in 4.4.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 pierre-yves samyn 2015-02-20 10:53:44 UTC
Hi

Verified resolved on windows 7/64 & Version: 4.4.1.1
Build ID: b5ac74bf8683a92078a2bc8aff97d4b436af63cb
Locale: fr_FR

Thank you :)

Regards
Pierre-Yves
Comment 12 Robinson Tryon (qubit) 2015-12-17 07:34:39 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]