fdo#72486 SwWrtShell::SelAll: if in table, then call extended select all ...

... only in case the whole table is already selected

Change-Id: If7626954460e16945af6b21402a84e90c71ae138
(cherry picked from commit fa39e7970496537258eaad1f5351db2d675225b6)